--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,12 +7,15 @@ environment:
   sdk: '>=3.0.5 <4.0.0'
 
 dependencies:
+  carded: ^0.0.3+1
   dio: ^5.3.0
   flutter:
     sdk: flutter
   flutter_provider: ^2.1.0
   flutter_svg: ^2.0.7
+  normie: ^1.0.0
   provider: ^6.0.5
+  swipeable_card_stack: ^0.0.5
 
 dev_dependencies:
   flutter_test:
